# Google-Calender-MCP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt  setup_kiro.sh  test_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-test.yml
src/calendar_mcp/: __init__.py  auth.py  server.py
